reports/22.handling_datetype.log
Traceback (most recent call last):
  File "C:\Users\sungmooklim\anaconda3\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "C:\Users\sungmooklim\anaconda3\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\sungmooklim\anaconda3\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\sungmooklim\anaconda3\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\sungmooklim\anaconda3\lib\asyncio\base_events.py", line 647, in run_until_complete
    return future.result()
  File "C:\Users\sungmooklim\anaconda3\lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "C:\Users\sungmooklim\anaconda3\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\sungmooklim\anaconda3\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
datetime í‘œí˜„ ê´€ë ¨. 

df['Birth_date']       = df['Birth'].dt.date         # YYYY-MM-DD(ë¬¸ì)
df['Birth_year']       = df['Birth'].dt.year         # ì—°(4ìë¦¬ìˆ«ì)
df['Birth_month']      = df['Birth'].dt.month        # ì›”(ìˆ«ì)
df['Birth_month_name'] = df['Birth'].dt.month_name() # ì›”(ë¬¸ì)

df['Birth_day']        = df['Birth'].dt.day          # ì¼(ìˆ«ì)
df['Birth_time']       = df['Birth'].dt.time         # HH:MM:SS(ë¬¸ì)
df['Birth_hour']       = df['Birth'].dt.hour         # ì‹œ(ìˆ«ì)
df['Birth_minute']     = df['Birth'].dt.minute       # ë¶„(ìˆ«ì)
df['Birth_second']     = df['Birth'].dt.second       # ì´ˆ(ìˆ«ì)

df['Birth_quarter']       = df['Birth'].dt.quarter       # ë¶„ê¸°(ìˆ«ì)
df['Birth_weekday_name']  = df['Birth'].dt.weekday_name  # ìš”ì¼ì´ë¦„(ë¬¸ì) (=day_name())
df['Birth_weekday']       = df['Birth'].dt.weekday       # ìš”ì¼ìˆ«ì(0-ì›”, 1-í™”) (=dayofweek)
df['Birth_weekofyear']    = df['Birth'].dt.weekofyear    # ì—° ê¸°ì¤€ ëª‡ì£¼ì§¸(ìˆ«ì) (=week)
df['Birth_dayofyear']     = df['Birth'].dt.dayofyear     # ì—° ê¸°ì¤€ ëª‡ì¼ì§¸(ìˆ«ì)
df['Birth_days_in_month'] = df['Birth'].dt.days_in_month # ì›” ì¼ìˆ˜(ìˆ«ì) (=daysinmonth)
------------------

[1;36m  Input [1;32mIn [1][1;36m[0m
[1;33m    datetime í‘œí˜„ ê´€ë ¨.[0m
[1;37m             ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (1248359079.py, line 1)

